tests/testcases/invalid/04_invalid_char_literal.ciel
fn main() -> int {
    char c = 'AB'; // too many characters in char literal
    return 0;
}
